2. cert-manager/ingress-eample-tls.yaml
# NOT TO BE APPLIED, JUST AN EXAMPLE ON HOW TO CREATE AN INGRESS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "nginx" # or any other ingresses
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    ingress.kubernetes.io/app-root: "/"
    cert-manager.io/cluster-issuer: "letsencrypt-staging" # or "letsencrypt-production"
spec:
  tls:
    - hosts:
        - "argocd.localhost"
      secretName: kubernetes-dashboard-tls
  rules:
    - host: argocd.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
